# spec-kit

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  spec-driven.md
.claude/commands/: speckit.analyze.md  speckit.commits.md  speckit.implement.md  speckit.milestones.md  speckit.specify.md  speckit.tasks.md
.github/workflows/: lint.yml  release.yml  test.yml
.github/workflows/scripts/: create-release-packages.sh  generate-release-notes.sh
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  interactive-prompts.sh  parse-constitution.sh  short-name-generator.sh
.specify/templates/: commits-template.md
docs/: quickstart.md
scripts/bash/: update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1
specs/001-commit-based-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-commit-based-tasks/checklists/: requirements.md
specs/001-commit-based-tasks/contracts/: commits-format.md  milestones-format.md
src/specify_cli/: __init__.py
templates/: milestones-template.md  tasks-template.md
templates/commands/: commits.md  implement.md  milestones.md
tests/: __init__.py  conftest.py
tests/bash/: test_check_prerequisites.bats  test_commits_grouping.bats  test_common.bats  test_implement_enhanced.bats  test_interactive_prompts.bats  test_milestones.bats  test_parse_constitution.bats  test_repetitive_tasks.bats  test_short_name_generator.bats  test_ticket_workflow.bats
tests/powershell/: InteractivePrompts.Tests.ps1  ShortNameGenerator.Tests.ps1
tests/python/: __init__.py  test_cli.py
